Style: remove Arrays.asList